404 page changes, trying to fix overflow with navbar

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,7 @@
 .background-video-div {
   position: fixed;
   z-index: -1;
-  background-image: url(https://aakashkalmady.dev/videos/background.webm);
+  background-image: url(https://aakashkalmady.dev/videos/background.mp4);
   left: 0;
   top: 0;
   bottom: 0;
@@ -28,14 +28,25 @@
   bottom: 80px;
   display: flex;
   align-items: center;
+  justify-content: center;
   z-index: 50;
 }
-.blank-space {
-  flex: 0.3;
+
+.home-404 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 80px;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 50;
 }
-.home-msg {
-  flex: 1;
-  text-align: left;
+
+.home-404-msg {
+  width: 50%;
+  height: 50%;
   color: white;
   font-weight: 700;
   font-size: 5vh;
@@ -43,6 +54,38 @@
   flex-shrink: 0;
   margin-right: 10%;
   transition: color 0.35s;
+  text-align: left;
+}
+
+.home-404-msg a {
+  padding: 10px 20px 10px 20px;
+  background-color: rgb(237, 181, 0);
+  border: none;
+  border-radius: 3px;
+  font-size: 30%;
+  font-weight: bold;
+  cursor: pointer;
+  text-wrap: nowrap;
+  transition: padding 0.5s, background-color 0.5s, font-size 0.5s;
+  text-decoration: none;
+  color: black;
+}
+
+.home-404-msg a:hover {
+  background-color: rgb(194, 148, 0);
+  padding: 15px 40px 15px 40px;
+  font-size: 45%;
+}
+
+.home-msg {
+  text-align: left;
+  color: white;
+  font-weight: 700;
+  width: 50%;
+  font-size: 5vh;
+  background-color: rgba(0, 0, 0, 0);
+  flex-shrink: 0;
+  margin-right: 10%;
 }
 .home-portrait {
   position: fixed;
@@ -80,8 +123,9 @@
     border-top-right-radius: 20px;
   }
 
-  .home-msg {
+  .home-msg p {
     color: black;
+    transition: color 0.35s;
   }
 
   .background-video-div {
@@ -89,13 +133,10 @@
   }
 }
 
-.home-msg p {
-  margin: 0;
-}
-
 .home-msg a {
   padding: 10px 20px 10px 20px;
   background-color: rgb(237, 181, 0);
+  color: black;
   border: none;
   border-radius: 3px;
   font-size: 30%;
